--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<h1>My Portfolio Page</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Grandma's Cookie Recipe!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+    <script src="main.js"></script>
+</head>
+<body>
+        <h1>My Portfolio Page</h1>
 
-<h2>My Projects</h2>
+        <h2>My Projects</h2>
+</body> 
+
+
+
+
